# docs/swagger.json
@@ -374,7 +374,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/consume.logoutMessage"
+                            "$ref": "#/definitions/rbt.InputMessage-string"
                         }
                     }
                 ],
@@ -401,7 +401,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/services.ConsumeOrderPlacedMessage"
+                            "$ref": "#/definitions/rschema.ConsumeOrderPlacedMessage"
                         }
                     }
                 ],
@@ -469,19 +469,6 @@
                 }
             }
         },
-        "consume.logoutMessage": {
-            "type": "object",
-            "properties": {
-                "correlation_id": {
-                    "type": "string",
-                    "example": "123123"
-                },
-                "message": {
-                    "type": "string",
-                    "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ0b2tlbklEIjoiNjZiNjBlYzhlMGYzYzY4OTUzMzJlOWNmIiwidXNlcklEIjoiNjZhZmQ3ZWU4YTBhYjRjZjQ0YTQ3NDcyIn0.who7upBctOpmlVmTvOgH1qFKOHKXmuQCkEjMV3qeySg"
-                }
-            }
-        },
         "errs.ValidationErr": {
             "type": "object",
             "properties": {
@@ -501,6 +488,26 @@
                 },
                 "path": {
                     "type": "string"
+                }
+            }
+        },
+        "rbt.InputMessage-string": {
+            "type": "object",
+            "properties": {
+                "correlation_id": {
+                    "type": "string",
+                    "example": "123123"
+                },
+                "exchange": {
+                    "type": "string",
+                    "example": "Remote Exchange to Reply"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "routing_key": {
+                    "type": "string",
+                    "example": "Remote RoutingKey to Reply"
                 }
             }
         },
@@ -537,15 +544,7 @@
                 }
             }
         },
-        "rst.ErrorData": {
-            "type": "object",
-            "properties": {
-                "error": {
-                    "type": "string"
-                }
-            }
-        },
-        "services.ConsumeOrderPlacedArticle": {
+        "rschema.ConsumeOrderPlacedArticle": {
             "type": "object",
             "properties": {
                 "articleId": {
@@ -556,19 +555,27 @@
                 }
             }
         },
-        "services.ConsumeOrderPlacedMessage": {
+        "rschema.ConsumeOrderPlacedMessage": {
             "type": "object",
             "properties": {
                 "articles": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/services.ConsumeOrderPlacedArticle"
+                        "$ref": "#/definitions/rschema.ConsumeOrderPlacedArticle"
                     }
                 },
                 "cartId": {
                     "type": "string"
                 },
                 "orderId": {
+                    "type": "string"
+                }
+            }
+        },
+        "rst.ErrorData": {
+            "type": "object",
+            "properties": {
+                "error": {
                     "type": "string"
                 }
             }
