# internal/rabbit/consume/schema.go
@@ -1,7 +1,0 @@
-package consume
-
-type ConsumeMessage struct {
-	Version    int    `json:"version"`
-	RoutingKey string `json:"routing_key" example:"Remote RoutingKey to Reply"`
-	Exchange   string `json:"exchange"`
-}
